# d9s

./: Cargo.toml  README.md  TODO.txt
queries/: get_pipelines.graphql  get_run.graphql  get_runs.graphql  schema.json
src/: app.rs  config.rs  get_pipelines.rs  get_run.rs  get_runs.rs  input.rs  main.rs  search.rs  ui.rs  utils.rs
src/views/: contexts_view.rs  default_view.rs  mod.rs  pipelines_view.rs  run_view.rs  runs_view.rs
