[package]
name = "d9s"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
graphql_client = "0.14.0"
env_logger = "0.10 "
log = "0.4"
chrono = "0.4.39"
dirs = "5.0"
toml= "0.8"
